# turtlebot_android

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  build.gradle  configure.py  package.xml  settings.gradle  stack.xml  turtlebot_android.rosinstall
core_components/: manifest.xml  project.properties
core_components/src/main/: AndroidManifest.xml
core_components/src/main/java/com/github/turtlebot/turtlebot_android/core_components/: TurtlebotDashboard.java
follower/: Makefile  build.gradle
follower/res/layout/: main.xml
follower/res/values/: strings.xml
follower/src/main/: AndroidManifest.xml
follower/src/main/java/com/github/turtlebot/turtlebot_android/follower/: FollowerActivity.java
follower/src/main/res/layout/: main.xml
follower/src/main/res/layout-land/: main.xml
follower/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
panorama/: AndroidManifest.xml  build.gradle  build.xml  project.properties
panorama/res/layout-land/: main.xml
panorama/res/layout-port/: main.xml
panorama/res/values/: strings.xml
panorama/src/com/ros/turtlebot/apps/panorama/: PanoramaActivity.java
panorama/src/main/: AndroidManifest.xml
panorama/src/main/java/com/github/turtlebot/turtlebot_android/panorama/: PanoramaActivity.java  ScaledBitmapFromCompressedImage.java
panorama/src/main/res/layout-land/: main.xml
panorama/src/main/res/layout-port/: main.xml
panorama/src/main/res/values/: strings.xml
panorama/src/turtlebot_panorama/: TakePano.java  TakePanoRequest.java  TakePanoResponse.java
turtlebot_android/: .project  CMakeLists.txt  package.xml
turtlebot_android_core_components/: .project  AndroidManifest.xml  CMakeLists.txt  manifest.xml  package.xml  project.properties
turtlebot_android_core_components/src/org/ros/android/turtlebot/apps/core_components/: TurtlebotDashboard.java
turtlebot_android_follower/: .gitignore  .project  AndroidManifest.xml  CMakeLists.txt  manifest.xml  package.xml  project.properties
turtlebot_android_follower/src/com/ros/turtlebot/apps/follower/: FollowerActivity.java
turtlebot_android_panorama/: .project  AndroidManifest.xml  CMakeLists.txt  Makefile  build.gradle  manifest.xml  package.xml  project.properties
turtlebot_android_panorama/res/values/: strings.xml
turtlebot_android_panorama/src/com/ros/turtlebot/apps/panorama/: PanoramaActivity.java  ScaledBitmapFromCompressedImage.java
turtlebot_core/: build.gradle
turtlebot_core/src/main/: AndroidManifest.xml
turtlebot_core/src/main/java/com/github/turtlebot/turtlebot_android/turtlebot_core/: TurtlebotDashboard.java
turtlebot_core/src/main/res/layout/: turtlebot_dashboard.xml
turtlebot_core_components/: .classpath  .project  AndroidManifest.xml  project.properties
turtlebot_core_components/src/com/ros/turtlebot/apps/core_components/: TurtlebotDashboard.java
