<?xml version="1.0"?>
<package>
  <name>turtlebot_android</name>
  <version>0.1.0</version>
  <description>
    Android applications and libraries for turtlebot.
  </description>
  <url>http://ros.org/wiki/turtlebot_android</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_tools</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_apps</build_depend>
  <build_depend>rosjava_core</build_depend>
</package>
