<?xml version="1.0"?>
<package>
  <name>turtlebot_android</name>
  <version>0.1.0</version>
  <description>
    Android applications and libraries for turtlebot.
  </description>
  <url type="website">http://ros.org/wiki/turtlebot_android</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_android</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_android/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_apps</build_depend>
  <build_depend>android_extras</build_depend>
  <build_depend>rosjava_messages</build_depend>
    <!--<build_depend>rosjava_core</build_depend>
    <build_depend>create_node</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
    <build_depend>turtlebot_follower</build_depend>
    <build_depend>turtlebot_panorama</build_depend>-->
</package>
